# NBodyCuda

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  buffer.cpp  buffer.cu  buffer.h  main.cpp  main.cu  points.cpp  points.h  shader.cpp  shader.h  test.cpp
src/shaders/: main.vert  nbody.frag  nbody.geom  nbody.vert  pnbody.vert
